<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newAdvert">

    <TextView
        android:id="@+id/textView"
        android:layout_width="139dp"
        android:layout_height="35dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/post_type_"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="77dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="318dp"
        android:text="@string/name_"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="77dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="318dp"
        android:text="@string/phone_"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="129dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="266dp"
        android:text="@string/description_"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhone" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="77dp"
        android:layout_height="29dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="317dp"
        android:text="@string/dates_"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDes" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="122dp"
        android:layout_height="24dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="272dp"
        android:text="@string/location_"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:hint="@string/type_your_name_here"
        android:inputType="textPersonName|textCapWords"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:hint="@string/type_your_phone_number"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/editDes"
        android:layout_width="380dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="15dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_input"
        android:inputType="textMultiLine"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="14dp"
        android:autofillHints=""
        android:hint="@string/type_date"
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="192dp"
        android:layout_height="42dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041">

        <RadioButton
            android:id="@+id/lostRad"
            android:layout_width="89dp"
            android:layout_height="wrap_content"
            android:checked="false"

            android:text="Lost"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035"
            tools:ignore="OnClick,TouchTargetSizeCheck" />

        <RadioButton
            android:id="@+id/FoundRad"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Found"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.785"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.035"
            tools:ignore="OnClick,TouchTargetSizeCheck" />

    </RadioGroup>

    <Button
        android:id="@+id/PostBtn"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="14dp"
        android:text="POST"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LocBtn" />

    <Button
        android:id="@+id/LocBtn"
        android:layout_width="225dp"
        android:layout_height="48dp"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="14dp"
        android:text="GET CURRENt LOCATION"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/LocText"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="13dp"
        android:ems="10"
        android:hint="Enter location "
        android:inputType="textPersonName"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>